@@ -1,0 +1,28 @@
+<?php
+
+/**
+ * silver_steel_theme.php
+ *    Name:   Silver-Steel
+ *    Author: Pavel Spatny
+ *    Date:   2004/11/16
+ */
+
+global $color;
+$color[0]   = '#d0d4de'; //       addit. text background
+$color[1]   = '#900000'; //        ??
+$color[2]   = '#C00000'; //        warnings
+$color[3]   = '#d0d4de'; //       Left Bar Background
+$color[4]   = '#e8ecf6'; //       Normal Background
+$color[5]   = '#b0b8d0'; //       Table Headers
+$color[6]   = '#102030'; //       Text on left bar
+$color[7]   = '#206090'; //       Links
+$color[8]   = '#102070'; //       Normal text
+$color[9]   = '#b8c0cc'; //       Darker version of #0
+$color[10]  = '#a8b0bc'; //       Darker version of #9
+$color[11]  = '#307090'; //       Special Folders color
+$color[12]  = '#d0d4de'; //       odd message background
+$color[13]  = '#ffffff'; //
+$color[14]  = '#ffffff'; //
+$color[15]  = '#D0D0D0'; //       Unselectable folders
+
+?>
